{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 106,
  "lineage": "7e4afe92-3418-1028-e6f1-24122f64298a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d4a26e93afa5afe",
            "arn": "arn:aws:ec2:ap-south-1:692859952204:elastic-ip/eipalloc-04d4a26e93afa5afe",
            "domain": "vpc",
            "id": "eipalloc-04d4a26e93afa5afe",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-202-18-160.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.18.160",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "oneclick-nat-eip"
            },
            "tags_all": {
              "Name": "oneclick-nat-eip"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692859952204:internet-gateway/igw-01f843dff11b26bd8",
            "id": "igw-01f843dff11b26bd8",
            "owner_id": "692859952204",
            "region": "ap-south-1",
            "tags": {
              "Name": "oneclick-igw"
            },
            "tags_all": {
              "Name": "oneclick-igw"
            },
            "vpc_id": "vpc-034bd8c50faab83ed"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:692859952204:loadbalancer/app/oneclick-alb/1ad6a3706a2c4032",
            "arn_suffix": "app/oneclick-alb/1ad6a3706a2c4032",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "oneclick-alb-878114886.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:692859952204:loadbalancer/app/oneclick-alb/1ad6a3706a2c4032",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "oneclick-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0d3ee09a57afcb492"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-032884da6c19f847b"
              },
              {
                "subnet_id": "subnet-09b7c7963deee304b"
              }
            ],
            "subnets": [
              "subnet-032884da6c19f847b",
              "subnet-09b7c7963deee304b"
            ],
            "tags": {
              "Name": "oneclick-alb"
            },
            "tags_all": {
              "Name": "oneclick-alb"
            },
            "vpc_id": "vpc-034bd8c50faab83ed",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:692859952204:listener/app/oneclick-alb/1ad6a3706a2c4032/3282e83184dfa21b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:692859952204:targetgroup/oneclick-tg/1de41986ac87380a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:692859952204:listener/app/oneclick-alb/1ad6a3706a2c4032/3282e83184dfa21b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:692859952204:loadbalancer/app/oneclick-alb/1ad6a3706a2c4032",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:692859952204:targetgroup/oneclick-tg/1de41986ac87380a",
            "arn_suffix": "targetgroup/oneclick-tg/1de41986ac87380a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:692859952204:targetgroup/oneclick-tg/1de41986ac87380a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "oneclick-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "oneclick-tg"
            },
            "tags_all": {
              "Name": "oneclick-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-034bd8c50faab83ed"
          },
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d4a26e93afa5afe",
            "association_id": "eipassoc-0b3fde541d4e5b352",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d8dce33cc46a7a3d",
            "network_interface_id": "eni-03496634aaf6e18f5",
            "private_ip": "10.0.4.224",
            "public_ip": "13.202.18.160",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-032884da6c19f847b",
            "tags": {
              "Name": "oneclick-nat"
            },
            "tags_all": {
              "Name": "oneclick-nat"
            },
            "vpc_id": "vpc-034bd8c50faab83ed"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692859952204:route-table/rtb-0f6dbeba4799e9bea",
            "id": "rtb-0f6dbeba4799e9bea",
            "owner_id": "692859952204",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d8dce33cc46a7a3d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "oneclick-private-rt"
            },
            "tags_all": {
              "Name": "oneclick-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-034bd8c50faab83ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692859952204:route-table/rtb-0fcc0d6f75dc7d633",
            "id": "rtb-0fcc0d6f75dc7d633",
            "owner_id": "692859952204",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f843dff11b26bd8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "oneclick-public-rt"
            },
            "tags_all": {
              "Name": "oneclick-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-034bd8c50faab83ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0354dff47868abd62",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f6dbeba4799e9bea",
            "subnet_id": "subnet-0c649088e4f1adf61"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0896fe5ac61041f14",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f6dbeba4799e9bea",
            "subnet_id": "subnet-0c3c489005613788d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea915fe04b203e79",
            "region": "ap-south-1",
            "route_table_id": "rtb-0fcc0d6f75dc7d633",
            "subnet_id": "subnet-032884da6c19f847b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6c5b8f166b7e98f",
            "region": "ap-south-1",
            "route_table_id": "rtb-0fcc0d6f75dc7d633",
            "subnet_id": "subnet-09b7c7963deee304b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692859952204:security-group/sg-0d3ee09a57afcb492",
            "description": "Allow HTTP and HTTPS from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3ee09a57afcb492",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "oneclick-alb-sg",
            "name_prefix": "",
            "owner_id": "692859952204",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "oneclick-alb-sg"
            },
            "tags_all": {
              "Name": "oneclick-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-034bd8c50faab83ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692859952204:security-group/sg-03d3d6ce4b35982fd",
            "description": "Allow traffic from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d3d6ce4b35982fd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3ee09a57afcb492"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "oneclick-ec2-sg",
            "name_prefix": "",
            "owner_id": "692859952204",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "oneclick-ec2-sg"
            },
            "tags_all": {
              "Name": "oneclick-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-034bd8c50faab83ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692859952204:subnet/subnet-0c649088e4f1adf61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c649088e4f1adf61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "692859952204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "oneclick-private-0"
            },
            "tags_all": {
              "Name": "oneclick-private-0"
            },
            "vpc_id": "vpc-034bd8c50faab83ed"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692859952204:subnet/subnet-0c3c489005613788d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.176.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3c489005613788d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "692859952204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "oneclick-private-1"
            },
            "tags_all": {
              "Name": "oneclick-private-1"
            },
            "vpc_id": "vpc-034bd8c50faab83ed"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692859952204:subnet/subnet-032884da6c19f847b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032884da6c19f847b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "692859952204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "oneclick-public-0"
            },
            "tags_all": {
              "Name": "oneclick-public-0"
            },
            "vpc_id": "vpc-034bd8c50faab83ed"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692859952204:subnet/subnet-09b7c7963deee304b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b7c7963deee304b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "692859952204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "oneclick-public-1"
            },
            "tags_all": {
              "Name": "oneclick-public-1"
            },
            "vpc_id": "vpc-034bd8c50faab83ed"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:692859952204:vpc/vpc-034bd8c50faab83ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a5d686e4e7edd41",
            "default_route_table_id": "rtb-088ddcb53472f7ede",
            "default_security_group_id": "sg-0532f67c1c70274a2",
            "dhcp_options_id": "dopt-034df9485696d51d0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034bd8c50faab83ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-088ddcb53472f7ede",
            "owner_id": "692859952204",
            "region": "ap-south-1",
            "tags": {
              "Name": "oneclick-vpc"
            },
            "tags_all": {
              "Name": "oneclick-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}